syntax = "proto3";
package example.demo.v1;

import "example/demo/v1/type/salary.proto";
import "google/api/annotations.proto";

option java_multiple_files = true;
option java_package = "com.example.demo.v1";
option go_package = "github.com/example/service/salary";

service SalaryService {
  rpc updateSalary(UpdateSalaryRequest) returns (SalaryProto) {
    option (google.api.http) = {
      put: "/v1/salaries:updateSalary"
      body: "*"
    };
  };
  rpc getSalary(GetSalaryRequest) returns (SalaryProto) {
    option (google.api.http) = {
      get: "/v1/salaries/{emp_id}"
    };
  };
}

message UpdateSalaryRequest {
  string emp_id = 1;
  int32  salary = 2;
}

message GetSalaryRequest{
  string emp_id = 1;
}